Script changes for using the new fedora.server.utilities.status classes to automatically shutdown tomcat on startup failure, to watch startup and shutdown, and to return appropriate error codes when either fails.